备份：准备重命名FileType枚举以消除混淆